<resources>
    <string name="app_name">vobank</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">signIn</string>
    <string name="title_activity_daftar_or_masuk">DaftarOrMasuk</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="lupa_pin">Lupa Pin</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="nomor_pin">Nomor Pin</string>
    <string name="todo">TODO</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="title_activity_menu">menu</string>
    <string name="menu">Menu</string>
    <string name="cashtag">Cashtag</string>
    <string name="button">Button</string>
    <string name="string_daftar" />

</resources>
